@@ -6,6 +6,7 @@
 -Fixed- Now creates an internal SendQ to minimize the number of packets flying across the interwebs on connect
 -Fixed- Now gets IP from GETINFO not DNS resolving - Thanks Allan for pointing out the silly methodology :)
 -Fixed- Added SQL escaping
+-Fixed- Random bug whereby the server seems so send the NICK timestamp prefixed with a :
 
 [Version 1.0]
 Initial Release
